changed logic for multithreading reading news